# speciesnet-studio

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  QUICKSTART.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.release.yml  docker-compose.yml  justfile
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SPONSOR_TIERS.md  labeler.yml
backend/: Dockerfile  README.md  mypy.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: a50917b77cf4_initial_schema.py  b3c1d2e4f5a6_add_reviewer_name.py
backend/src/app/: config.py  db.py  main.py
backend/src/app/adapters/: base.py  megadetector.py  speciesnet_adapter.py  subprocess_adapter.py
backend/src/app/models/: collection.py  ingestion_progress.py  item.py  job.py  prediction.py  review.py
backend/src/app/repositories/: collections.py  reviews.py
backend/src/app/routers/: auto_review.py  collections.py  export.py  inference.py  items.py  sample.py  stats.py
backend/src/app/schemas/: collection.py
backend/src/app/services/: exporters.py  ingestion.py  jobs.py  results_parser.py  sample_data.py
backend/tests/: conftest.py  test_batch_review.py  test_export.py  test_health.py  test_ingestion.py  test_results_parser.py  test_reviews.py  test_speciesnet_adapter.py  test_stats.py  test_subprocess_adapter.py
config/: inference.yaml.example
docs/: maintainer-checklist.md  open-collective-setup.md  release-cadence.md  supporters.md
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+49 files in other folders)
